[package]
name = "aoc"
version = "0.1.0"
authors = ["Ben Picolo <be.picolo@gmail.com>"]
edition = "2018"

[dependencies]
structopt = { version = "0.2", default-features = false }

[[bin]]
name = "day1-1"
path = "src/day1/part1/main.rs"

[[bin]]
name = "day1-2"
path = "src/day1/part2/main.rs"

[[bin]]
name = "day2-1"
path = "src/day2/part1/main.rs"

[[bin]]
name = "day2-2"
path = "src/day2/part2/main.rs"
